Mobile html & css done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <span></span>
         </div>
       </header>
-      <!-- Each Section has an ID (used for the anchor) and 
+      <!-- Each Section has an ID (used for the anchor) and
       a data attribute that will populate the li node.
       Adding more sections will automatically populate nav.
       The first section is set to active class by default -->
@@ -41,7 +41,7 @@
           </p>
           <p class="text">
             This is my mantra. You need a website that looks
-            amazing and actually works! Here's when I come in. 
+            amazing and actually works! Here's when I come in.
             I'm very passionate about technology and I'd love to
             use my skills to help you create the best web apps
             you've ever seen.
@@ -95,43 +95,43 @@
           </p>
           <div class="skill-set">
             <div class="skill start-align">
-              <div class="skill-name">HTML</div>
+              <div class="skill-name center">HTML</div>
               <div class="html emerald"></div>
             </div>
             <div class="skill start-align">
-              <div class="skill-name">CSS</div>
+              <div class="skill-name center">CSS</div>
               <div class="css emerald"></div>
             </div>
             <div class="skill start-align">
-              <div class="skill-name">ES6</div>
+              <div class="skill-name center">ES6</div>
               <div class="js emerald"></div>
             </div>
             <div class="skill start-align">
-              <div class="skill-name">React</div>
+              <div class="skill-name center">React</div>
               <div class="react emerald"></div>
             </div>
             <div class="skill start-align">
-              <div class="skill-name">Redux</div>
+              <div class="skill-name center">Redux</div>
               <div class="redux emerald"></div>
             </div>
             <div class="skill start-align">
-              <div class="skill-name">Angular</div>
+              <div class="skill-name center">Angular</div>
               <div class="angular emerald"></div>
             </div>
             <div class="skill start-align">
-              <div class="skill-name">Node JS</div>
+              <div class="skill-name center">Node JS</div>
               <div class="node emerald"></div>
             </div>
             <div class="skill start-align">
-              <div class="skill-name">MongoDB</div>
+              <div class="skill-name center">MongoDB</div>
               <div class="mongo emerald"></div>
             </div>
             <div class="skill start-align">
-              <div class="skill-name">SQL</div>
+              <div class="skill-name center">SQL</div>
               <div class="sql emerald"></div>
             </div>
             <div class="skill start-align">
-              <div class="skill-name">GitHub</div>
+              <div class="skill-name center">GitHub</div>
               <div class="github emerald"></div>
             </div>
           </div>
@@ -205,6 +205,7 @@
               E-mail
             </a>
           </div>
+          <img class="full-logo" src="./images/logo/full_logo.png" alt="Full Ori Bermudez' Logo" />
         </div>
       </section>
     </main>
