--- a/index.html
+++ b/index.html
@@ -6,33 +6,37 @@
   <title>Ori Bermudez</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
   <link href="./styles/main.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <nav id="navbar">
       <!-- Navigation starts as empty UL that will be populated with JS -->
-      <img class="navbar-logo" src="./images/logo/icon_logo.png" alt="Ori Bermudez' logo"/>
+      <div class="logo">
+        <img class="navbar-logo" src="./images/logo/icon_logo.png" alt="Ori Bermudez' logo"/>
+        <img class="navbar-logo-text" src="./images/logo/text_logo.png" alt="Ori Bermudez' logo"/>
+      </div>
       <span class="navbar-name">ORI BERMUDEZ</span>
       <img class="mobile-menu" src="./images/icons/mobile_menu.svg" alt="Mobile menu icon"/>
-      <ul id="navbar-list">
-        <li class="nav-active">
-          <a href="#hero">Home</a>
-        </li>
-        <li>
-          <a href="#about">About</a>
-        </li>
-        <li>
-          <a href="#skills">Skills</a>
-        </li>
-        <li>
-          <a href="#work">Work</a>
-        </li>
-        <li>
-          <a href="#connect">Connect</a>
-        </li>
-      </ul>
+      <div id="navbar-list">
+        <ul class="center">
+          <li class="nav-active">
+            <a href="#hero">Home</a>
+          </li>
+          <li>
+            <a href="#about">About</a>
+          </li>
+          <li>
+            <a href="#skills">Skills</a>
+          </li>
+          <li>
+            <a href="#work">Work</a>
+          </li>
+          <li>
+            <a href="#connect">Connect</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <main>
       <header id="hero" class="center">
