--- a/index.html
+++ b/index.html
@@ -181,13 +181,12 @@
             </div>
             <div class="project-container">
               <a
-              class="project-container"
               href="https://oribermudez.github.io/healthyVibes/index.html"
               target="_blank"
               rel="noopener noreferrer"
               >
                 <h2>Code Like A Girl</h2>
-                <img src="./images/clip_careers.jpg" alt="Code Like A Girl Project" />
+                <img src="./images/code_like_a_girl.jpg" alt="Code Like A Girl Project" />
               </a>
             </div>
           </div>
