--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       </div>
       <span class="navbar-name">ORI BERMUDEZ</span>
       <img class="mobile-menu" src="./images/icons/mobile_menu.svg" alt="Mobile menu icon"/>
+      <div id="mobile-window" class="remove">
+        <img id="close-icon" src="./images/icons/close.png" alt="Close Icon" />
+        <ul id="mobile-list" class="center"></ul>
+      </div>
       <div id="navbar-menu">
         <ul id="navbar-list" class="center"></ul>
       </div>
